Fix about us wording, reduce .subtitle gaps

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -83,7 +83,7 @@ p {
 .subtitle {
 	font-size: 1.2em;
 	margin-top: 1em;
-	margin-bottom: 5em;
+	margin-bottom: 4em;
 }
 
 ul, ol {
